[package]
name = "conjunto-director-pubsub"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
conjunto-addresses = { workspace = true }
log = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
