[package]
name = "conjunto_lockbox"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
conjunto_addresses = { workspace = true }
solana-rpc-client = { workpace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
