[package]
name = "conjunto-transwise"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conjunto-core = { workspace = true }
conjunto-lockbox = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
